--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "build:app:assets": "node ./scripts/build-app-assets.js",
     "build:storybook": "yarn run build:storybook:assets && yarn run build:storybook:cljs && storybook build",
     "build:storybook:assets": "node ./scripts/build-storybook-assets.js",
-    "build:storybook:cljs": "clojure -M:dev:shadow-cljs release storybook",
+    "build:storybook:cljs": "clojure -M:dev:shadow-cljs compile storybook",
     "build:renderer": "yarn run wasm-pack build ./renderer --target web --out-dir ../resources/public/js/renderer --release",
     "e2e:server": "node ./scripts/e2e-server.js",
     "fmt:clj": "cljfmt fix --parallel=true src/ test/",
