:recycle: Remove all usage of graalvm js runtime
And replace it with a commandline call to nodejs
for execute a custom svgo based command line script.

--- a/exporter/package.json
+++ b/exporter/package.json
@@ -18,6 +18,7 @@
     "luxon": "^3.5.0",
     "playwright": "^1.48.1",
     "raw-body": "^3.0.0",
+    "svgo": "penpot/svgo#v3",
     "xml-js": "^1.6.11",
     "xregexp": "^5.1.1"
   },
